--- a/more js concepts/index.html
+++ b/more js concepts/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./async.js"></script>
+    <script src="./setinterval.js"></script>
 </body>
 </html>
